--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,13 @@ h3 {
   color: white;
   text-decoration: underline;
   margin: 10px;
+  text-align: center;
 }
 
 h4 {
   font-family: 'Dancing Script', cursive;
   font-weight: 700;
-  font-size: 30px; 
+  font-size: 20px; 
 }
 
 h5 {
@@ -35,7 +36,6 @@ img {
   vertical-align: center;
   background-color: none;
 }
-
 
 
 
